# tp_tasks

.github/workflows/: .task6.yml.swp  task6.yml
task0/: README.md
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.cpp  main_test.cpp
task3/: .CMakeLists.txt.swp  CMakeLists.txt
task3/src/: CMakeLists.txt
task4/src/tree_utils_02/: .size_node.py.swp  .size_tree.py.swp  .tree.py.swp
task4/tests/test_02/: .test_size_tree.py.swp  .test_tree.py.swp  test_size_tree.py  test_tree.py
task5/cmake-with-flask/: .Dockerfile.swp  CMakeLists.txt  Dockerfile
task6/: .CMakeLists.txt.swp  CMakeLists.txt
