cmake_minimum_required(VERSION 3.5)

project(Task6)

set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})
set(CMAKE_INSTALL_RPATH ${PROJECT_SOURCE_DIR}/lib)
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)

add_subdirectory(B)
add_subdirectory(C)

set_target_properties(C PROPERTIES CMAKE_BUILD_WITH_INSTALL_RPATH TRUE CMAKE_INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib)
install(TARGETS C DESTINATION ${CMAKE_INSTALL_PREFIX}/opt/techprog)
